--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,34 +1,35 @@
 <head>
 
-  <title>Gaming the Lottery{% if page.title %} - {{ page.title }}{% endif %}</title>
+  <title>{{ site.title}}{% if page.title %} - {{ page.title }}{% endif %}</title>
 
   <!-- Meta -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="An international investigation into the global lottery industry.">
-  <meta name="author" content="Gaming the Lottery">
+  <meta name="description" content="{{ site.description }}">
+  <meta name="author" content="Site author">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="">
-  <meta name="twitter:title" content="Gaming the Lottery{% if page.title %} - {{ page.title }}{% endif %}">
-  <meta name="twitter:description" content="An international investigation into the global lottery industry.">
-  <meta name="twitter:creator" content="Gaming the Lottery">
-  <meta name="twitter:image" content="http://gamingthelottery.org/img/overlay.jpg">
+  <meta name="twitter:title" content="{{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}">
+  <meta name="twitter:description" content="{{ site.description }}">
+  <meta name="twitter:creator" content="Trust Africa">
+  <meta name="twitter:image" content="">
 
   <!-- Open Graph data -->
-  <meta property="og:title" content="Gaming the Lottery{% if page.title %} - {{ page.title }}{% endif %}" />
+  <meta property="og:title" content="{{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://gamingthelottery.org{{ page.url }}" />
-  <meta property="og:image" content="http://gamingthelottery.org/img/overlay.jpg" />
-  <meta property="og:description" content="An international investigation into the global lottery industry." />
-  <meta property="og:site_name" content="Gaming the Lottery" />
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+  <meta property="og:image" content="" />
+  <meta property="og:description" content="{{ site.description }}" />
+  <meta property="og:site_name" content="{{ site.title }}" />
 
 
   <link rel="shortcut icon" href="/img/favicon.png">
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link rel="stylesheet"  href="/css/main.css">
 
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
 </head>
