--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,5 @@
 <nav>
-  <img src="" alt="Trust Africa logo">
+  <div class="container">
+    <img src="img/trust-africa.jpg" alt="Project logo">
+  </div>
 </nav>
