--- a/css/main.scss
+++ b/css/main.scss
@@ -22,10 +22,76 @@ nav {
   }
 }
 
+.badge-primary {
+  background-color: $navy;
+  &:hover {
+    background-color: $navy !important;
+  }
+}
+
+.badge-secondary {
+  background-color: $beige;
+  &:hover {
+    background-color: $beige !important;
+  }
+}
+
 .single-story {
   -webkit-box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
   box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
   color: #4a4a4a;
   max-width: 100%;
   position: relative;
+  border-radius: 4px;
+  .single-story-content {
+    padding: 10px;
+    .story-title {
+    }
+    .story-author {
+      color: #999;
+    }
+    .story-summary {
+      margin-top: 20px;
+    }
+  }
+  .story-footer {
+    border-top: 1px solid #dbdbdb;
+    -webkit-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    .story-footer-item {
+      padding: 10px;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-preferred-size: 0;
+      flex-basis: 0;
+      -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+      flex-grow: 1;
+      -ms-flex-negative: 0;
+      flex-shrink: 0;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      color: $blue;
+      &:first-of-type {
+        border-right: 1px solid #dbdbdb;
+        border-bottom-left-radius: 4px;
+      }
+      &:last-of-type {
+        border-bottom-right-radius: 4px;
+      }
+      &:hover {
+        color: $navy;
+        text-decoration: none;
+      }
+    }
+  }
 }
