--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,9 +27,8 @@
 
   <link rel="shortcut icon" href="/img/favicon.png">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/bulma.css">
+  <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet"  href="/css/main.css">
-
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
 </head>
