--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,8 +3,6 @@
 
   {% include head.html %}
 
-  <script src="/js/site.js"></script>
-
   <body class="{{ page.layout }}-page">
 
     {% include header.html %}
@@ -12,6 +10,9 @@
     {{ content }}
 
     {% include footer.html %}
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="/js/site.js"></script>
 
     <script>
       // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -25,25 +26,26 @@
 
     <script>
       $(function() {
+        url = window.location.href;
         $(".page-share .facebook").on("click", function(e) {
           e.preventDefault();
-          window.open("https://www.facebook.com/sharer/sharer.php?u="+window.location.href,
+          window.open("https://www.facebook.com/sharer/sharer.php?u="+window.location.href  + "%23" + $(this).parents(".single-story").attr("id"),
             "share", "width=600, height=400, scrollbars=no");
-            ga('send', 'social', 'facebook', 'share', url);
+          // ga('send', 'social', 'facebook', 'share', url);
         });
 
         $(".page-share .twitter").on("click", function(e) {
           e.preventDefault();
-          window.open("https://twitter.com/intent/tweet?&url="+window.location.href,
+          window.open("https://twitter.com/intent/tweet?&url="+window.location.href+"%23"+$(this).parents(".single-story").attr("id"),
             "share", "width=600, height=400, scrollbars=no");
-            ga('send', 'social', 'twitter', 'share', url);
+          // ga('send', 'social', 'twitter', 'share', url);
         });
 
-        $(".page-share .linkedin").on("click", function(e) {
+        $(".page-share .email").on("click", function(e) {
           e.preventDefault();
-          window.open("https://www.linkedin.com/shareArticle?url="+window.location.href,
-            "share", "width=600, height=400, scrollbars=no");
-            ga('send', 'social', 'linkedin', 'share', url);
+          var emailTitle = $(this).parent().prev().children(".title").text().replace(/&/g, '%26').trim();
+          window.location = 'mailto:?subject=' + emailTitle + '&body=' + url  + "#" + $(this).parents(".single-story").attr("id");
+          // ga('send', 'social', 'email', 'share', url);
         });
       });
 
