--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,10 +25,10 @@
   <meta property="og:site_name" content="{{ site.title }}" />
 
 
-  <link rel="shortcut icon" href="/img/favicon.png">
+  <link rel="shortcut icon" href="img/favicon.png">
 
-  <link rel="stylesheet" href="/css/bulma.css">
+  <link rel="stylesheet" href="css/bulma.css">
   <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet"  href="/css/main.css">
+  <link rel="stylesheet"  href="css/main.css">
 
 </head>
