--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,7 +12,7 @@
     {% include footer.html %}
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="/js/site.js"></script>
+    <script src="js/site.js"></script>
 
     <script>
       // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
