add partners, series headers

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,45 @@
-<footer>
+<footer class="footer">
+  <section class="container">
+    <h3>This project was made possible by:</h3>
+    <div class="row">
+      <div class="columns is-multiline partners">
+        <div class="column">
+          <a target="_blank" href="https://journalism.columbia.edu/">
+            <img src="img/partners/cjs.jpg">
+          </a>
+        </div>
+        <div class="column">
+          <a target="_blank" href="http://depechesdumali.com/">
+            <img src="img/partners/ddm.jpg">
+          </a>
+        </div>
+        <div class="column">
+          <a target="_blank" href="http://www.fij.org">
+            <img src="img/partners/fij.png">
+          </a>
+        </div>
+        <div class="column">
+          <a target="_blank" href="https://investigativedashboard.org/">
+            <img src="img/partners/id.png">
+          </a>
+        </div>
+        <div class="column">
+          <a target="_blank" href="https://www.occrp.org">
+            <img src="img/partners/occrp.png">
+          </a>
+        </div>
+        <div class="column">
+          <a target="_blank" href="https://openup.org.za/">
+            <img src="img/partners/openup.svg">
+          </a>
+        </div>
+        <div class="column">
+          <a target="_blank" href="http://www.pennlive.com/">
+            <img src="img/partners/pennlive.jpg">
+          </a>
+        </div>
+      </div>
 
+    </div>
+  </section>
 </footer>
