--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,12 @@
-<nav>
+<section class="section">
   <div class="container">
-    <img src="img/trust-africa.jpg" alt="Project logo">
+    <div class="header columns">
+      <div class="column column-title is-two-thirds-desktop">
+        <div class="title">Investigating illicit financial flows in Africa</div>
+      </div>
+      <div class="column column-logo is-one-third-desktop">
+        <img class="logo" src="img/trust-africa.jpg" alt="Project logo">
+      </div>
+    </div>
   </div>
-</nav>
+</section>
