--- a/css/main.scss
+++ b/css/main.scss
@@ -13,10 +13,49 @@ html {
   border-top: 3px solid $gold;
 }
 
-nav {
-  img {
-    width: 100%;
-    max-width: 300px;
+.header {
+  .column-title {
+    display: flex;
+    .title {
+      font-size: 2.25rem;
+      background-color: $navy;
+      color: white;
+      padding: 0.5rem 1rem;
+    }
+  }
+  .column-logo {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    img.logo {
+      max-height: 3.25rem;
+    }
+  }
+}
+
+.series {
+  .col-series {
+    position: relative;
+    .series-info {
+      position: absolute;
+      height: calc(100% - 1.9rem);
+      width: calc(100% - 1.5rem);
+      pointer-events: none;
+      padding: 3rem;
+      color: white;
+      top: 0.75rem;
+      left: 0.75rem;
+      background-color: rgba(0,0,0,0.5);
+    }
+    .series-title {
+      font-size: 3.5rem;
+      line-height: 3.5rem;
+      font-weight: 600;
+    }
+    .series-summary {
+      margin-top: 1rem;
+      font-size: 1.2rem;
+    }
   }
 }
 
@@ -63,7 +102,7 @@ nav {
       &:hover {
         background-color: darken($gold, 3%);
       }
-    } 
+    }
   }
   .title {
     font-size: 1.25rem;
@@ -132,4 +171,19 @@ a {
     &:hover {
       color: darken($gold, 10%);
     }
+}
+
+footer.footer {
+  h3 {
+    margin-bottom: 1rem;
+  }
+  .partners {
+    img {
+      background-color: #fff;
+      width: 100%;
+      border: 1px solid $gold;
+      padding: 10px;
+      margin-bottom: -0.5rem;
+    }
+  }
 }
