all stories, fancy transition

--- a/css/main.scss
+++ b/css/main.scss
@@ -59,6 +59,14 @@ html {
   }
 }
 
+.series-lottery, .series-banking {
+  display: none;
+}
+
+.articles {
+  margin-top: 1rem;
+}
+
 .single-story {
   height: 100%;
   img {
