--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,11 @@
     <div class="row">
       <div class="columns is-multiline partners">
         <div class="column">
+          <a target="_blank" href="http://trustafrica.org/en/">
+            <img src="img/partners/trust-africa.jpg">
+          </a>
+        </div>
+        <div class="column">
           <a target="_blank" href="https://journalism.columbia.edu/">
             <img src="img/partners/cjs.jpg">
           </a>
